<resources>
    <string name="app_name">Hungry4Pizza</string>
    <string name="hint_Login">Login</string>
    <string name="hint_Senha">Senha</string>
    <string name="botao_login">Login</string>
    <string name="txt_cartao">Cartão</string>
    <string name="txt_vr">VR</string>
    <string name="txt_cheque">Cheque</string>
    <string name="txt_dinheiro">Dinheiro</string>
    <string name="txt_saudacao">Olá</string>
    <string name="txt_escolha_pizza">Escolha sua Pizza</string>
    <string name="txt_pizza_atum">Atum</string>
    <string name="txt_pizza_bacon">Bacon</string>
    <string name="txt_pizza_calabresa">Calabresa</string>
    <string name="txt_pizza_mussarela">Mussarela</string>
    <string name="txt_tamanho_pizza">Escolha o Tamanho</string>
    <string name="txt_pizza_pequena">Pequena</string>
    <string name="txt_pizza_media">Média</string>
    <string name="txt_pizza_grande">Grande</string>
    <string name="txt_forma_pagto">Forma de Pagamento</string>
    <string name="txt_extras">Extras</string>
    <string name="txt_borda_recheada">Borda Recheada</string>
    <string name="txt_recheio_extra">Recheio Extra</string>
    <string name="txt_refrigerante">Refrigerante</string>
    <string name="txt_sobremesa">Sobremesa</string>
    <string name="txt_calcular">Calcular</string>
    <string-array name="opcoes_pagamento">
        <item>@string/txt_cartao</item>
        <item>@string/txt_vr</item>
        <item>@string/txt_cheque</item>
        <item>@string/txt_dinheiro</item>
    </string-array>
</resources>
