<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rafaelarnosti.hungry4pizza.PedidoActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txt_saudacao"
            android:textStyle="bold"
            android:paddingTop="@dimen/dimen_paddingTop"/>
        <TextView
            android:id="@+id/tvPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_escolha_pizza"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbatum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_atum"/>
                <CheckBox
                    android:id="@+id/cbbacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_bacon"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbcalabresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_calabresa"/>
                <CheckBox
                    android:id="@+id/cbmussarela"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_mussarela"/>
            </LinearLayout>
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_tamanho_pizza"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgTamanhoPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbPequena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_pizza_pequena" />

                <RadioButton
                    android:id="@+id/rbMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_pizza_media" />

                <RadioButton
                    android:id="@+id/rbGrande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_pizza_grande" />
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:id="@+id/tvFormaPgto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_forma_pagto"/>
        <Spinner
            android:id="@+id/spn_pgto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/opcoes_pagamento">
        </Spinner>
        <TextView
            android:id="@+id/tvExtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_extras"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbbordarecheada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_borda_recheada"/>
                <CheckBox
                    android:id="@+id/cbrecheioextra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_recheio_extra"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbrefrigerante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_refrigerante"/>
                <CheckBox
                    android:id="@+id/cbsobremesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_sobremesa"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/btnCalcular"
            android:onClick="calcular"
            android:text="@string/txt_calcular" />
    </LinearLayout>
</ScrollView>
